--- a/index.html
+++ b/index.html
@@ -4,68 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Ranking Tournament</title>
+    <meta name="description" content="Upload images and create personalized rankings through head-to-head comparisons">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="script.js" as="script">
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <header class="header">
             <h1 class="title">
-                <span class="trophy">🏆</span>
+                <span class="trophy" aria-hidden="true">🏆</span>
                 Image Ranking Tournament
             </h1>
             <p class="subtitle">
                 Upload images and pick your favorites to create a personalized ranking
             </p>
-        </div>
-        <div id="upload-section">
-            <div class="drag-zone" id="drag-zone">
-                <div class="upload-icon">📁</div>
-                <h3 class="drag-zone-title">Drop images here</h3>
-                <p class="drag-zone-subtitle">or click to browse</p>
-                <input type="file" id="file-input" class="file-input" accept="image/*" multiple>
-                <button class="btn btn-primary" onclick="fileInput.click()">
-                    Choose Images
-                </button>
-            </div>
-        </div>
-        <div id="main-content" class="hidden">
-            <!-- Progress card -->
-            <div class="card">
-                <div class="progress-container">
-                    <span class="progress-text" id="progress-text">Progress: 0 / 0 comparisons</span>
-                    <span class="progress-text" id="progress-percent">0%</span>
+        </header>
+
+        <main>
+            <section id="upload-section" aria-label="Image Upload">
+                <div class="drag-zone" id="drag-zone" role="button" tabindex="0" 
+                     aria-describedby="drag-zone-instructions">
+                    <div class="upload-icon" aria-hidden="true">📁</div>
+                    <h2 class="drag-zone-title">Drop images here</h2>
+                    <p class="drag-zone-subtitle" id="drag-zone-instructions">
+                        or click to browse for multiple image files
+                    </p>
+                    <input type="file" id="file-input" class="file-input" 
+                           accept="image/*" multiple 
+                           aria-label="Choose image files for ranking">
+                    <button class="btn btn-primary" type="button" 
+                            onclick="document.getElementById('file-input').click()"
+                            aria-describedby="drag-zone-instructions">
+                        Choose Images
+                    </button>
                 </div>
-                <div class="progress-bg">
-                    <div class="progress-bar" id="progress-bar" style="width: 0%"></div>
-                </div>
-            </div>
-            <!-- Comparison section -->
-            <div class="card" id="comparison-section">
-                <div id="tiebreaker-alert" class="tiebreaker-alert hidden">
-                    🔥 TIEBREAKER ROUND! 🔥<br>
-                    <small>Battle of the champions!</small>
-                </div>
-                <h2 class="section-title">Which do you prefer?</h2>
-                <div class="comparison-grid" id="comparison-grid"></div>
-            </div>
-            <!-- Completion message -->
-            <div class="completion-message hidden" id="completion-message">
-                <div class="trophy">🎉</div>
-                <h2 class="completion-title">Ranking Complete!</h2>
-                <p class="completion-text">Your personalized ranking is ready below.</p>
-            </div>
-            <!-- Results and controls -->
-            <div class="card">
-                <div class="section-header">
-                    <h2 class="section-title">Current Rankings</h2>
-                    <div class="button-group">
-                        <button class="btn" onclick="exportResults()">💾 Export</button>
-                        <button class="btn" onclick="reset()">🔄 Reset</button>
+            </section>
+
+            <div id="main-content" class="hidden">
+                <!-- Progress card -->
+                <section class="card" aria-label="Tournament Progress">
+                    <div class="progress-container">
+                        <span class="progress-text" id="progress-text" aria-live="polite">
+                            Progress: 0 / 0 comparisons
+                        </span>
+                        <span class="progress-text" id="progress-percent" aria-live="polite">
+                            0%
+                        </span>
                     </div>
-                </div>
-                <div class="rankings-grid" id="rankings-grid"></div>
+                    <div class="progress-bg" role="progressbar" 
+                         aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                         aria-labelledby="progress-text">
+                        <div class="progress-bar" id="progress-bar" style="width: 0%"></div>
+                    </div>
+                </section>
+
+                <!-- Comparison section -->
+                <section class="card" id="comparison-section" aria-label="Image Comparison">
+                    <div id="tiebreaker-alert" class="tiebreaker-alert hidden" 
+                         role="alert" aria-live="assertive">
+                        <span aria-hidden="true">🔥</span> TIEBREAKER ROUND! <span aria-hidden="true">🔥</span><br>
+                        <small>Battle of the champions!</small>
+                    </div>
+                    <h2 class="section-title">Which do you prefer?</h2>
+                    <div class="comparison-grid" id="comparison-grid" role="group" 
+                         aria-label="Choose between two images"></div>
+                </section>
+
+                <!-- Completion message -->
+                <section class="completion-message hidden" id="completion-message" 
+                         role="status" aria-live="polite">
+                    <div class="trophy" aria-hidden="true">🎉</div>
+                    <h2 class="completion-title">Ranking Complete!</h2>
+                    <p class="completion-text">Your personalized ranking is ready below.</p>
+                </section>
+
+                <!-- Results and controls -->
+                <section class="card" aria-label="Results and Controls">
+                    <div class="section-header">
+                        <h2 class="section-title">Current Rankings</h2>
+                        <div class="button-group" role="group" aria-label="Action buttons">
+                            <button class="btn" type="button" onclick="exportResults()"
+                                    aria-label="Export ranking results">
+                                <span aria-hidden="true">💾</span> Export
+                            </button>
+                            <button class="btn" type="button" onclick="reset()"
+                                    aria-label="Reset tournament and start over">
+                                <span aria-hidden="true">🔄</span> Reset
+                            </button>
+                        </div>
+                    </div>
+                    <div class="rankings-grid" id="rankings-grid" 
+                         aria-label="Final image rankings" role="list"></div>
+                </section>
             </div>
-        </div>
+        </main>
     </div>
     <script defer src="script.js"></script>
 </body>
